# apex

./: .gitignore  README.md
backend/: .env.example  .gitignore  README.md  create_admin.py  docker-compose.yml  pyproject.toml  verify_cancel.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/dependencies/: permission.py
backend/app/core/: config.py  cors.py  database.py  enums.py
backend/app/crud/: __init__.py  audit_log.py  base.py  brand.py  cart.py  crud_testdrive_booking.py  crud_testdrive_slot.py  crud_user.py  model.py  order.py
backend/app/db/: session.py
backend/app/models/: __init__.py  audit_log.py  brand.py  cart.py  contact.py  model.py  order.py  payment.py  testdrive.py  user.py  wishlist.py
backend/app/repositories/: testdrive.py
backend/app/schemas/: audit_log.py  brand.py  cart.py  checkout.py  model.py  model_compare.py  order.py  order_cancel.py  testdrive.py  token.py  user.py
backend/app/services/auth/: login.py  otp.py  register.py  token.py
backend/app/services/car/: brand.py  compare_service.py  filter_service.py  filter_strategy.py  model.py
backend/app/services/cart/: cart.py
backend/app/services/checkout/: checkout.py  payment_gateway.py
backend/app/services/mail/: mail.py
backend/app/services/order/: order.py  order_cancel_service.py  state_machine.py
backend/app/services/shipping/: shipping.py
backend/app/services/storage/: storage_service.py
backend/app/services/testdrive/: testdrive.py
backend/app/services/user/: user.py
backend/data/.minio.sys/: format.json
backend/init/: init.sql
(+112 files in other folders)
