[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.119.0",
    "fastapi-mail>=1.5.8",
    "passlib>=1.7.4",
    "pydantic-settings>=2.11.0",
    "pydantic[email]>=2.12.2",
    "pyjwt>=2.10.1",
    "pymysql>=1.1.2",
    "redis>=7.0.1",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.37.0",
]
